--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ tests/test_wasm
 tests/test_mos65xx
 tests/test_bpf
 tests/test_riscv
+tests/test_xtensa
 
 # regress binaries
 suite/regress/invalid_read_in_print_operand
